--- a/index copy.html
+++ b/index copy.html
@@ -13,14 +13,14 @@
         <div>
         <a href = "#main" class = "skip">Skip to Main Content</a>
         </div>
-        <nav id = "nav_bar">
-            <ul>
-                <li><a href = "index.html" class = "active">Pocketbook Home (current page)</a></li>
-                <li><a href = "pets.html">Pets</a></li>
-                <li><a href = "recipes.html">Recipes</a></li>
-                <li><a href = "travel.html">Travel</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav class="nav_bar">
+                <a href = "index.html" class = "active">Home (current page)</a>
+                <a href = "pets.html">Pets</a>
+                <a href = "recipes.html">Recipes</a>
+                <a href = "travel.html">Travel</a>
+            </nav>
+        </div>
         <h1>SI 339 CCP Complete Code Assignment--Terri Kang</h1>
     </header>
     <main id = "main" tabindex = "-1">
