--- a/pets copy.html
+++ b/pets copy.html
@@ -11,22 +11,20 @@
 <body>
     <header>
         <div>
-            <a href = "#main" class = "skip focusable" tabindex = "1" id = "skip-link">Skip to Main Content</a>
+            <a href = "#main" class = "skip">Skip to Main Content</a>
         </div>
 
         <div>
-            <nav id = "nav_bar">
-                <ul>
-                    <li><a href = "index.html">Home</a></li>
-                    <li><a href = "pets.html" class = "active">Pets (current page)</a></li>
-                    <li><a href = "recipes.html">Recipes</a></li>
-                    <li><a href = "travel.html">Travel</a></li>
-                </ul>
+            <nav class="nav_bar">
+                <a href = "index.html">Home</a>
+                <a href = "pets.html" class = "active">Pets (current page)</a>
+                <a href = "recipes.html">Recipes</a>
+                <a href = "travel.html">Travel</a>
             </nav>
         </div>
         <h1>Pets</h1>
     </header>
-    <main id = "main" tabindex = "0">
+    <main id = "main" tabindex = "-1">
         <div>
             <h2>Bacon Q Dog</h2>
             <img src="images/bacon.jpg" class = "introimage" width = "400" alt="Brown labradoodle wearing colorful lei">
