--- a/recipes copy.html
+++ b/recipes copy.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <a href = "#main" class = "skip">Skip to Main Content</a>
-        <nav id = "nav_bar">
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "pets.html">Pets</a></li>
-                <li><a href = "recipes.html" class = "active">Recipes (current page)</a></li>
-                <li><a href = "travel.html">Travel</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav class="nav_bar">
+                <a href = "index.html">Home</a>
+                <a href = "pets.html">Pets</a>
+                <a href = "recipes.html" class = "active">Recipes (current page)</a>
+                <a href = "travel.html">Travel</a>
+            </nav>
+        </div>
         <h1>Recipes</h1>
     </header>
     <main id = "main" tabindex = "-1">
