--- a/travel copy.html
+++ b/travel copy.html
@@ -11,18 +11,17 @@
 <body>
     <header>
         <a href = "#main" class = "skip">Skip to Main Content</a>
-        <nav id = "nav_bar">
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "pets.html">Pets</a></li>
-                <li><a href = "recipes.html">Recipes</a></li>
-                <li><a href = "travel.html" class = "active">Travel (current page)</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav class="nav_bar">
+                <a href = "index.html">Home</a>
+                <a href = "pets.html">Pets</a>
+                <a href = "recipes.html">Recipes</a>
+                <a href = "travel.html" class = "active">Travel (current page)</a>
+            </nav>
+        </div>
         <h1>Destinations</h1>
     </header>
     <main id = "main" tabindex = "-1">
-
         
             <h2>Rome</h2>
             <div class = "info">
