--- a/recipes.html
+++ b/recipes.html
@@ -25,7 +25,7 @@
 `
             <h2>Chocolate Chip Banana Bread</h2>
             <div class = "info">
-            <img src = "images/chocolate_chip_banana_bread.JPG" class = "introimage" width = "400" alt = "Chocolate Chip Banana Bread">
+            <img src = "images/chocolate_chip_banana_bread.JPG" width = "400" alt = "Chocolate Chip Banana Bread">
             <p>This is a tried-and-tested recipe that I have used numerous times for making the perfect chocolate chip banana bread! Not only does it help utilize the bananas that have slowly overripened at the back of the fridge, it ends up creating an incredibly delicious, and relatively healthy, dessert. </p>
             
             <div class = "ingredients">
@@ -59,7 +59,7 @@
 
             <h2>Homemade Mac & Cheese</h2>
             <div class = "info">
-        <img src = "images/mac&cheese4.jpg" class = "introimage" width = "400" alt = "Mac & Cheese">
+        <img src = "images/mac&cheese4.jpg" width = "400" alt = "Mac & Cheese">
         <p>Macaroni and cheese, commonly known as mac & cheese, is a comfort food staple that has captured the hearts of people all over the world. Originating from Europe and popularized in the United States, this dish consists of elbow macaroni pasta smothered in a creamy cheese sauce. The simplicity of its ingredients—pasta, cheese, and often a touch of butter or milk—belies a rich, complex flavor that has made it a favorite for both quick weeknight dinners and festive holiday gatherings.</p>
         <div class = "ingredients">
         <h3>Recipe Ingredients</h3>
@@ -86,7 +86,7 @@
 
             <h2>Guacamole</h2>
             <div class = "info">
-        <img src = "images/guacamole.jpg" class = "introimage" width = "400" alt = "Guacamole">
+        <img src = "images/guacamole.jpg" width = "400" alt = "Guacamole">
         <p>Guacamole is a Mexican dip made from mashed avocados, tomatoes, onions, cilantro, lime juice, and chili pepper, creating a creamy, zesty, and versatile condiment often enjoyed with tortilla chips, tacos, and more.</p>
         <div class = "ingredients">
         <h3>Recipe Ingredients</h3>
